# internal/interface/dto/model/wordpress_gbp.go
@@ -1,0 +1,21 @@
+package model
+
+import "time"
+
+type WordpressGbp struct {
+	ID              int       `gorm:"column:id;primaryKey;autoIncrement"`
+	Name            string    `gorm:"column:name"`
+	Memo            string    `gorm:"column:memo"`
+	WordpressDomain string    `gorm:"column:wordpress_domain"`
+	BusinessName    string    `gorm:"column:business_name"`
+	BusinessTitle   string    `gorm:"column:business_title"`
+	MapsURL         string    `gorm:"column:maps_url"`
+	StartDate       time.Time `gorm:"column:start_date"`
+	Status          int       `gorm:"column:status"`
+	UpdatedAt       time.Time `gorm:"column:updated_at;autoUpdateTime"`
+	CreatedAt       time.Time `gorm:"column:created_at;autoCreateTime"`
+}
+
+func (*WordpressGbp) TableName() string {
+	return "wordpress_gbps"
+}
